<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_update"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/title_update"
        android:visible="true" />

    <item
        android:id="@+id/navigation_hot"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_hot"
        android:visible="true" />

    <item
        android:id="@+id/navigation_browser"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_browse"
        android:visible="true" />
    <item
        android:id="@+id/navigation_creators"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_creators"
        android:visible="true" />
    <item
        android:id="@+id/navigation_my_shelf"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/title_my_shelf"
        android:visible="true" />

</menu>